@@ -1,6 +1,12 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.251 2014/05/14 15:20:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.252 2014/06/10 13:49:12 jer Exp $
+
+*adobe-flash-11.2.202.378 (10 Jun 2014)
+
+  10 Jun 2014; Jeroen Roovers <jer@gentoo.org>
+  +adobe-flash-11.2.202.378.ebuild:
+  Version bump.
 
   14 May 2014; Jeroen Roovers <jer@gentoo.org>
   -adobe-flash-11.2.202.356.ebuild:
